--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "github-markdown-css": "^3.0.1",
-    "highlight.js": "^9.18.1"
+    "highlight.js": "^9.18.1",
+    "react-say": "^2.0.0"
   },
   "devDependencies": {
     "@types/react": "^16.9.9",
