--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,8 @@
-version: 2.0
+version: 2.1
 orbs:
   node: circleci/node@1.1.6
 jobs:
   build:
-    branches:
-      only: master
     executor:
       name: node/default
     steps:
@@ -13,3 +11,11 @@ jobs:
           steps:
             - run: npm install --legacy-peer-deps
       - run: sh deploy-circleci.sh
+
+workflows:
+  build-deploy:
+    jobs:
+      - build
+          filters:
+            branches:
+              only: master
