--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-say": "^2.0.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.165",
     "@types/react": "^16.9.9",
     "@types/react-dom": "^16.9.5",
     "babel-eslint": "^9.0.0",
