--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,3 +1,6 @@
 {
-  "extends": ["stylelint-config-ali", "stylelint-config-css-modules", "stylelint-config-prettier"]
+  "extends": ["stylelint-config-ali", "stylelint-config-css-modules", "stylelint-config-prettier"],
+  "rules": {
+    "selector-max-id": null
+  }
 }
