--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,7 +2,10 @@
   "name": "Lee6",
   "short_name": "Lee",
   "description": "",
-  "icons": [],
+  "icons": {
+    "16": "/home/assets/icon16.png",
+    "48": "/home/assets/icon48.png"
+  },
   "lang": "en-UK",
   "start_url": "/",
   "display": "standalone",
