--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2.1
 jobs:
-  build-deploy:
+  build_deploy:
     steps:
       - checkout
       - restore_cache:
@@ -24,7 +24,7 @@ workflows:
   version: 2
   build_and_deploy:
     jobs:
-      - build-deploy:
+      - build_deploy:
           filters:
             branches:
               only:
