--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,10 +5,19 @@ jobs:
       - image: circleci/node:12
     steps:
       - checkout
+      - restore_cache:
+          keys:
+            - v1-{{ .Branch }}-{{ checksum "yarn.lock" }}
+            - v1-{{ .Branch }}-
+            - v1-
       - run:
           name: Install npm dependencies
           command: |
             npm install
+      - save_cache:
+          key: v1-{{ .Branch }}-{{ checksum "yarn.lock" }}
+          paths:
+            - node_modules/
   run_build:
     docker:
       - image: circleci/node:12
