--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,3 +31,10 @@ workflows:
   build_deploy:
     jobs:
       - run_install
+      - run_build:
+          filters:
+            branches:
+              only:
+                - master
+          requires:
+            - run_install
