--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,13 @@
 version: 2.1
+
+defaults: &defaults
+  working_directory: ~/project/app
+  docker:
+    - image: circleci/node:12
+
 jobs:
   run_install:
-    docker:
-      - image: circleci/node:12
+    <<: *defaults
     steps:
       - checkout
       - restore_cache:
@@ -10,22 +15,21 @@ jobs:
             - v1-{{ .Branch }}-{{ checksum "yarn.lock" }}
             - v1-{{ .Branch }}-
             - v1-
-      - run:
-          name: Install npm dependencies
-          command: |
-            npm install
+      - run: npm install
       - save_cache:
           key: v1-{{ .Branch }}-{{ checksum "yarn.lock" }}
           paths:
             - node_modules/
+      - persist_to_workspace:
+          root: ~/project
+          paths:
+            - app
   run_build:
-    docker:
-      - image: circleci/node:12
+    <<: *defaults
     steps:
-      - run:
-          name: Build
-          command: |
-            npm run build
+      - attach_workspace:
+          at: ~/project
+      - run: npm run build
 
 workflows:
   build_deploy:
