--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,12 +1,11 @@
 version: 2.1
 
 defaults: &defaults
-  working_directory: ~/project/app
   docker:
     - image: circleci/node:12
 
 jobs:
-  run_install:
+  run_build:
     <<: *defaults
     steps:
       - checkout
@@ -15,30 +14,18 @@ jobs:
             - v1-{{ .Branch }}-{{ checksum "yarn.lock" }}
             - v1-{{ .Branch }}-
             - v1-
-      - run: npm install
+      - run: yarn
       - save_cache:
           key: v1-{{ .Branch }}-{{ checksum "yarn.lock" }}
           paths:
             - node_modules/
-      - persist_to_workspace:
-          root: ~/project
-          paths:
-            - app
-  run_build:
-    <<: *defaults
-    steps:
-      - attach_workspace:
-          at: ~/project
-      - run: npm run build
+      - run: mom run build
 
 workflows:
   build_deploy:
     jobs:
-      - run_install
       - run_build:
           filters:
             branches:
               only:
                 - master
-          requires:
-            - run_install
