--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,7 @@ jobs:
     steps:
       - attach_workspace:
           at: ~/project
+      - run: ls
       - run: yarn build
   run_deploy:
     <<: *defaults
