--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "build": "umi build",
     "test": "umi test",
     "lint": "npm run lint:es && npm run lint:ts && npm run lint:sty",
-    "lint:es": "eslint --ext .js --ext .jsx . --fix",
-    "lint:ts": "tslint \"src/**/*.ts\" \"src/**/*.tsx\" --fix",
-    "lint:sty": "stylelint \"**/*.less\" --fix"
+    "lint-fix": "npm run lint:es-fix && npm run lint:ts-fix && npm run lint:sty-fix",
+    "lint:es": "eslint --ext .js --ext .jsx . --quite",
+    "lint:ts": "tslint \"src/**/*.ts\" \"src/**/*.tsx\"",
+    "lint:sty": "stylelint \"**/*.less\""
+    "lint:es-fix": "eslint --ext .js --ext .jsx . --fix",
+    "lint:ts-fix": "tslint \"src/**/*.ts\" \"src/**/*.tsx\" --fix",
+    "lint:sty-fix": "stylelint \"**/*.less\" --fix"
   },
   "dependencies": {
     "antd": "3.x",
