--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint-fix": "npm run lint:es-fix && npm run lint:ts-fix && npm run lint:sty-fix",
     "lint:es": "eslint --ext .js --ext .jsx . --quite",
     "lint:ts": "tslint \"src/**/*.ts\" \"src/**/*.tsx\"",
-    "lint:sty": "stylelint \"**/*.less\""
+    "lint:sty": "stylelint \"**/*.less\"",
     "lint:es-fix": "eslint --ext .js --ext .jsx . --fix",
     "lint:ts-fix": "tslint \"src/**/*.ts\" \"src/**/*.tsx\" --fix",
     "lint:sty-fix": "stylelint \"**/*.less\" --fix"
