--- a/package.json
+++ b/package.json
@@ -15,43 +15,43 @@
     "lint:sty-fix": "stylelint \"**/*.less\" --fix"
   },
   "dependencies": {
-    "antd": "3.x",
+    "antd": "^3.26.20",
     "cryptorjs": "^3.0.0",
     "github-markdown-css": "^3.0.1",
-    "highlight.js": "^9.18.1",
-    "react-say": "^2.0.0"
+    "highlight.js": "^9.18.5",
+    "react-say": "^2.0.1"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.165",
-    "@types/react": "^16.9.9",
-    "@types/react-dom": "^16.9.5",
+    "@types/lodash": "^4.14.167",
+    "@types/react": "^16.14.2",
+    "@types/react-dom": "^16.9.10",
     "babel-eslint": "^9.0.0",
-    "eslint": "^5.16.0",
-    "eslint-config-ali": "^7.1.0",
-    "eslint-config-prettier": "^4.3.0",
+    "eslint": "^7.17.0",
+    "eslint-config-ali": "^11.4.1",
+    "eslint-config-prettier": "7.1.0",
     "eslint-config-react-jsx-filter": "^6.0.0",
-    "eslint-plugin-flowtype": "^2.50.3",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-react": "^7.16.0",
-    "husky": "^0.14.3",
-    "lint-staged": "^7.3.0",
-    "prettier": "^1.18.2",
-    "stylelint": "^9.10.1",
-    "stylelint-config-ali": "^0.3.1",
-    "stylelint-config-css-modules": "^1.5.0",
-    "stylelint-config-prettier": "^5.3.0",
-    "stylelint-scss": "^3.11.1",
-    "tslint": "^5.20.1",
-    "tslint-config-ali": "^0.2.4",
+    "eslint-plugin-flowtype": "^5.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
+    "husky": ">=4",
+    "lint-staged": ">=10",
+    "prettier": "^2.2.1",
+    "stylelint": "^13.8.0",
+    "stylelint-config-ali": "^0.4.1",
+    "stylelint-config-css-modules": "2.2.0",
+    "stylelint-config-prettier": "^8.0.2",
+    "stylelint-scss": "^3.18.0",
+    "tslint": "^6.1.3",
+    "tslint-config-ali": "^0.2.5",
     "tslint-config-prettier": "^1.18.0",
     "tslint-eslint-rules": "^5.4.0",
-    "tslint-react": "^3.6.0",
-    "umi": "^2.13.7",
+    "tslint-react": "^5.0.0",
+    "umi": "^2.13.16",
     "umi-plugin-mdx": "^0.2.6",
     "umi-plugin-pwa": "0.0.0-beta.0",
-    "umi-plugin-react": "^1.15.2"
+    "umi-plugin-react": "^1.15.8"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
@@ -59,7 +59,8 @@
   "lint-staged": {
     "*.js": [
       "npm run lint:es",
-      "git add"
+      "git add",
+      "eslint --cache --fix"
     ],
     "*.ts": [
       "npm run lint:ts",
@@ -72,6 +73,12 @@
     "*.{js,jsx,json,ts,tsx,css,md}": [
       "prettier --write",
       "git add"
-    ]
+    ],
+    "*.css": "stylelint --fix"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
